--- a/app.json
+++ b/app.json
@@ -3,7 +3,7 @@
     "name": "image-source",
     "description": "A very interesting project.",
     "slug": "image-source",
-    "privacy": "public",
+    "privacy": "unlisted",
     "sdkVersion": "30.0.0",
     "platforms": ["ios", "android"],
     "version": "1.0.0",
